asteria/core/tests/errors/elaboration_errors/cannot_synthesize_type_for_abstraction_term.asteriacore
x : forall {a : Type}. a
  = \{a} -> (\{b} -> x) {a}
  ;;
